// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: PasswordTooltop renders 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "marginVertical": 4,
    }
  }
>
  <Image
    source={
      {
        "testUri": "../../../src/assets/images/validCheck.png",
      }
    }
    style={
      {
        "height": 16,
        "marginRight": 4,
        "resizeMode": "contain",
        "width": 16,
      }
    }
  />
  <Text
    style={
      [
        [
          {
            "color": "#25282D",
          },
          {
            "fontFamily": "Poppins-Regular",
            "fontSize": 12,
            "fontStyle": "normal",
            "fontWeight": "400",
            "letterSpacing": 0.004,
            "lineHeight": 16,
            "textAlign": "left",
          },
        ],
        [
          {
            "color": "#878787",
          },
          {
            "color": "#1EC490",
          },
        ],
      ]
    }
  >
    label
  </Text>
</View>
`;

exports[`component: PasswordTooltop renders not satisfied style 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "marginVertical": 4,
    }
  }
>
  <Image
    source={
      {
        "testUri": "../../../src/assets/images/check.png",
      }
    }
    style={
      {
        "height": 16,
        "marginRight": 4,
        "resizeMode": "contain",
        "width": 16,
      }
    }
  />
  <Text
    style={
      [
        [
          {
            "color": "#25282D",
          },
          {
            "fontFamily": "Poppins-Regular",
            "fontSize": 12,
            "fontStyle": "normal",
            "fontWeight": "400",
            "letterSpacing": 0.004,
            "lineHeight": 16,
            "textAlign": "left",
          },
        ],
        [
          {
            "color": "#878787",
          },
          false,
        ],
      ]
    }
  >
    label
  </Text>
</View>
`;
